maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: not found: type Ent
var Angle:Ent = 0
          ^