maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {

var Angle:Ent = 0



def  keepHandOnSideWall() {                                  // suivre mur gauche
   	
   
  			gauche()
  			
			if (estFaceMur) {
				
				
				 droite()               
				 if (!estFaceMur) 
				 avance()
				 else  { if (!estFaceMur()) gauche()
				         else droite()
			}}
		     else avance()
	
			
}




while (!estSurBiscuit())  
 keepHandOnSideWall()

 prendBiscuit()
}






